# CircuitBot

./: .gitignore  README.md  requirements.txt
notebooks/: llama_inference.ipynb
src/: detect_from_microphone.py  device_data.json  llama_inference.py
src/embedded/hello_world/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
src/embedded/hello_world/main/: CMakeLists.txt  add_device.htm  control_device.htm  h  hello_world_main.c  web_page.htm  web_page_2.htm
src/embedded/hello_world/spiffs_image/: devices.json
src/embedded/ir_nec_transceiver/main/: ir_nec_transceiver_main.c
src/models/: dnn_circuit_bot_3.onnx
